--- a/attractions/Phuwaicave.html
+++ b/attractions/Phuwaicave.html
@@ -22,7 +22,8 @@
   </div>
   <div class="information">
     <h1>แนะนำสถานที่</h1>
-    <div class="row">
+    <hr style="width:5vw; transform:translateY(-1.5vh);">
+    <div class="row" style="width:90vw; transform:translateX(-2vw);">
       <div class="col">
         <p>&emsp;ถ้ำพุหวาย ตั้งอยู่ในเขตอุทยานแห่งชาติพุเตย เคยใช้เป็นสถานที่ถ่ายทำละครนาคี
       ภายในถ้ำจะพบภูเขาหินปูนสูงชันสลับซับซ้อน หินงอกหินย้อย หลากหลายแบบ อาทิ หินดอกเห็ด, หินย้อย,
@@ -30,29 +31,38 @@
       เป็นต้น อีกทั้งยังมีค้างคาวอาศัยอยู่ถึง 9 ชนิด และ พระพุทธรูป ที่ชาวบ้านและนักท่องเที่ยวเข้ามากราบไหว้
       </p>
       </div>
-      <div class="col">
-        <img src="../pic/ถ้ำพุหวาย2.jpg" alt="ถ้ำพุหวาย" class="side-img">
+      <div class="col" style="width:50%">
+        <ul id="Slider" style="list-style-type:none;">
+          <li><img src="../pic/ถ้ำพุหวาย2.jpg" alt="ถ้ำพุหวาย" class="side-img"></li>
+          <li><img src="../pic/ถ้ำพุหวาย3.jpg" alt="ถ้ำพุหวาย2" class="side-img"></li>
+          <li><img src="../pic/ถ้ำพุหวาย4.jpg" alt="ถ้ำพุหวาย2" class="side-img"></li>
+          <li><img src="../pic/ถ้ำพุหวาย5.jpg" alt="ถ้ำพุหวาย2" class="side-img"></li>
+        </ul>
       </div>
     </div>
-    <div class="row">
-      <div class="col">
-
+    <br>
+    <div class="row" style="width:90vw;">
+      <div class="col" style="width:50%; transform:translateX(-5vw);">
+        <ul id="Slider2" style="list-style-type:none;">
+          <li><img src="../pic/ถ้ำพุหวาย_back.jpg" alt="ถ้ำพุหวาย" class="side-img"></li>
+          <li><img src="../pic/ถ้ำพุหวาย_back2.jpg" alt="ถ้ำพุหวาย2" class="side-img"></li>
+          <li><img src="../pic/ถ้ำพุหวาย_back3.jpg" alt="ถ้ำพุหวาย2" class="side-img"></li>
+          <li><img src="../pic/ถ้ำพุหวาย_back4.jpg" alt="ถ้ำพุหวาย2" class="side-img"></li>
+        </ul>
       </div>
-      <div class="col">
+      <div class="col" style="width:50%">
         <p>&emsp;ทางด้านหลังของถ้ำพุหวาย คือ ถ้ำเทพมาลี หรือ
       ถ้ำพญานาค เป็นถ้ำขนาดเล็กค่อนข้างลึกมีความสวยงามตามธรรมชาติของหินงอกหินย้อย
       หากเดินขึ้นไปยัง ยอดเขาพุหวาย สูงกว่า 700 เมตรจากระดับน้ำทะเล
       จะสามารถมองเห็นทัศนียภาพที่กว้างไกลอย่างสวยงาม บนสันเขามีสภาพเป็นป่าเต็งรังที่ค่อนข้างสมบูรณ์</p>
-      
+
     </div>
     </div>
-
-
-
-
   </div>
 
 <div class="map-frame">
+  <h1 style="text-align:center; font-size:4em;">แผนที่ click me and go!!</h1>
+  <hr style="width:11vw; transform:translateY(-1vh);">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3853.656054868584!2d99.43944408228907!3d15.011786139541693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e15b45620265c7%3A0xa35284582be0b786!2z4LiW4LmJ4Liz4Lie4Li44Lir4Lin4Liy4Lii!5e0!3m2!1sth!2sth!4v1525010632587" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
