--- a/attractions/watKhaowong.html
+++ b/attractions/watKhaowong.html
@@ -25,9 +25,9 @@
   </div>
   <div class="information">
   <h1>แนะนำสถานที่</h1>
-  <hr>
+  <hr style="width:6vw; transform:translateY(-1.5vh);">
   <div class="butto">
-    <button class="next" id="fst">ดูข้อมูลแต่ละชั้น</button>
+    <button class="next" id="fst">ดูหน้าต่อไป</button>
     <button class="next" id="snd"></button>
   </div>
   <div class="row" id="struct">
@@ -89,7 +89,7 @@
 
 <div class="map-frame">
   <h1 style="text-align:center; font-size:4em;">แผนที่ click me and go!!</h1>
-  <hr>
+  <hr style="width:11vw; transform:translateY(-1vh);">
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d174425.88754217266!2d99.4562137049531!3d14.975820758920188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e144a80508411d%3A0x686f23bd659b9065!2z4Lin4Lix4LiU4LiW4LmJ4Liz4LmA4LiC4Liy4Lin4LiH!5e0!3m2!1sth!2sth!4v1525010672759" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
