--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+  <!doctype html>
 <html lang="en">
 <head>
   <!-- Required meta tags -->
@@ -19,12 +19,12 @@
   <nav class="navbar">
     <ul>
       <li><a href="#about">เรื่องทั่วไป</a></li>
-      <li><a href="#attractions">สถานที่ท่องเที่ยว</a></li>
+      <li><a href="#attractions">ไปเที่ยวไหนดี</a></li>
       <li><a href="#welcome" id="Logo-view">
-        <img src="pic/logo.png" alt="logo" id="Logo">
+        <img src="" alt="logo" id="Logo">
       </a></li>
-      <li><a href="#food">ของฝาก</a></li>
-      <li><a href="#">ติดต่อ</a></li>
+      <li><a href="#food">กินอะไรดี</a></li>
+      <li><a href="#contract">ผู้จัดทำ</a></li>
     </ul>
   </nav>
 
@@ -41,17 +41,19 @@
     <div class="row">
       <div class="col" id="view2">
         <h1 class="appear">ประวัติจังหวัดเกือบจะไม่ลึก</h1>
-        <hr>
+        <hr style="width:13vw; transform:translateY(-2vh);">
         <p class="appear">ดินแดนบางส่วนพบหลักฐานว่าเคยเป็นถิ่นที่อยู่อาศัยของมนุษย์ก่อนประวัติศาสตร์และเป็นที่ตั้งของเมือง โบราณ หลายเมืองในสมัยทวารวดี ตามตำนานกล่าวว่าในสมัยสุโขทัย
           ท้าวมหาพรหมได้เข้ามาสร้างเมืองที่บ้านอุทัยเก่า (อำเภอหนองฉาง) แล้วพาคนไทยมาอยู่ท่ามกลางหมู่บ้านกะเหรี่ยงและหมู่บ้านมอญ จึงเรียกว่า
           “เมืองอู่ไทย”ตาม กลุ่มหรือที่อยู่ของคนไทย ต่อมาเกิดน้ำแล้งกระแสน้ำเปลี่ยนทาง เมืองจึงถูกทิ้งร้าง ในสมัยกรุงศรีอยุธยาชาว กะเหรี่ยงชื่อ
           “พะตะเบิด” เข้ามาปรับปรุงเมืองอู่ไทย โดยขุดทะเลสาบขังน้ำไว้ใกล้เมืองและเป็นผู้ปกครองเมือง อู่ไทยคนแรก ชื่อเมือง จึงเรียกเพี้ยนเป็น
           “เมืองอุไทย” ตามสำเนียงชาวกะเหรี่ยงและ มีฐานะเป็นหัวเมืองหน้า ด่านชั้นนอกในการสกัดกั้นกองทัพพม่าที่จะเข้ามาตีกรุงศรีอยุธยา
           ต่อมาในสมัยกรุงรัตนโกสินทร์ตอนต้นมีการ อพยพผู้คน มาตั้งบ้านเรือนที่ริมฝั่งแม่น้ำสะแกกรังมากขึ้น และได้กลายเป็นที่ตั้งของตัวเมืองอุทัยธานีในปัจจุบัน
-          อุทัยธานีมีสถานที่น่าสนใจทางธรรมชาติ ประวัติศาสตร์ และโบราณคดีหลายแห่งที่น่าเที่ยวชมและศึกษาหาความรู้</p>
+          อุทัยธานีมีสถานที่น่าสนใจทางธรรมชาติ ประวัติศาสตร์ และโบราณคดีหลายแห่งที่น่าเที่ยวชมและศึกษาหาความรู้
+      </p>
       </div>
       <div class="slogan appear">
         <h1>คำขวัญจังหวัด</h1>
+        <hr style="width:5vw; transform:translateY(-1vh);">
         <h3>“อุทัยธานี เมืองพระชนกจักรี ปลาแรดรสดี ประเพณีเทโว ส้มโอบ้านน้ำตก”
           <br>มรดกโลกห้วยขาแข้ง แหล่งต้นน้ำสะแกกรัง ตลาดนัดดังโคกระบือ</h3>
       </div>
@@ -60,7 +62,6 @@
 
 
   <div class="container-fulid" id="attractions">
-    <h1 class="appear">สถานที่ท่องเที่ยว</h1>
     <div class="row" id="mapping">
       <!-- attraction1 -->
       <div class="col attraction-div" id="place1">
@@ -117,15 +118,106 @@
 </div>
 
 <div class="container-fluid" id="food">
+  <div class="butto">
+    <button class="next active" id="fst">อยากของคาว</button>
+    <button class="next" id="snd">อยากของหวาน</button>
+  </div>
+  <div class="menu">
+    <div class="dish">
+      <div id="dish1" class="dish_menu">
+        <div class="discb">
+        <h1>สวนอาหารนกน้อย</h1>
+        <p>&emsp;อาหารอร่อยบรรยากาศริมน้ำ เป็นเอกลักษณ์ของสวนอาหารนกน้อย เมนูแนะนำส่วนใหญ่ก็จะเป็นเมนูปลาเพื่อให้เข้ากับบรรยากาศริมน้ำสะแกกรังซึ่งถือเป็นจุดเด่นของร้านนี้
+          ไม่ว่าจะเป็น ปลาแรดทอดน้ำปลา ฉู่ฉี่ปลาเนื้ออ่อน ทอดมันปลากราย เนื้อปลากรายผัดขี้เมา
+          <br>
+          ร้านเปิดทุกวันตั้งแต่เวลา 10.00-22.00 น.</p>
+        </div>
+          <img src="pic/food/นกน้อย/นกน้อย3.jpg" alt="nok" >
+      </div>
+      <div id="dish2" class="dish_menu">
+        <div class="discb">
+          <h1>ข้าวมันไก่โกตี</h1>
+        <p>
+          &emsp;จัดเป็นร้านเก่าแก่อีกร้านหนึ่งของเมืองอุทัย เปิดกิจการมาแล้วกว่า 50 ปี เป็นข้าวมันไก่สูตรไต้หวัน มีน้ำจิ้มมาให้สองแบบ นอกจากข้าวมันไก่ก็ยังมีเมนูอื่นๆที่น่าสนใจ ไม่ว่าจะเป็น
+          กระเพาะปลา หมูกรอบ เป็ดย่าง หมูสะเต๊ะ
+          <br>
+          ร้านอยู่ใกล้ๆ กับตรอกโรงยา ตรงข้ามธนาคาร TMB
+          <br>
+          เปิดทุกวันเวลา 06.00-14.30 น.
+        </p>
+      </div>
+        <img src="pic/food/ข้าวมันไก่โกตี๋/ข้าวมันไก่โกตี๋3.jpg" alt="nok" style="transform: translateX(-150px);">
+      </div>
+      <div id="dish3" class="dish_menu">
+        <div class="discb">
+        <h1>เจ้ดาปลาลวก</h1>
+        <p>
+          &emsp;เป็นร้านเล็กๆอยู่ใจกลางเมืองอุทัย ทีเด็ดก็อยู่ที่ปลาลวกตามชื่อร้าน ส่วนเมนูอื่นๆ ก็เด็ดไม่แพ้กัน ทั้งหมูกรอบทอดน้ำปลา ผักหวานไฟแดง
+           เกาเหลาปลา ไข่เค็มหมูสับ
+           <br>
+           ร้านเปิดทุกวัน เวลา 17.00-22.00 น.
+        </p>
+      </div>
+        <img src="pic/food/เจ้ดาปลาลวก/เจ้ดาปลาลวก1.jpg" alt="nok" style="transform: translateX(-60px);">
+      </div>
+    </div>
+    <div class="dessert">
+      <div id="dish1" class="dish_menu">
+        <div class="discb">
+          <h1>Machère by Chin</h1>
+          <p>&emsp;ร้านนี้เปิดบริการมาสิบกว่าปี ทำน้ำเต้าหู้สดใหม่ทุกวัน ราคาย่อมเยา เหมาะที่จะมาทานหลังอาหารเย็น ร้านอยู่ตรงข้ามกับร้านเจ้ดาปลาลวก น
+            ้ำเต้าหู้มีหลากหลายทั้งน้ำเต้าหู้งาดำ น้ำเต้าหู้ชาเขียว น้ำเต้าหู้โอวันติน น้ำเต้าหู้ฟักทอง
+            ใครที่มากินครั้งแรกจะต้องยืนงงอยู่หน้าร้านซักพักเพราะเมนูเยอะมากจนเลือกไม่ถูก
+            <br>
+            ร้านเปิดทุกวันเวลา 15.00-22.00 น.
+            </p>
+        </div>
+        <img src="pic/food/Machère by Chin/Machère by Chin.jpg" alt="nok" style="transform: translateX(-128px);">
 
+      </div>
+      <div id="dish2" class="dish_menu">
+        <div class="discb">
+          <h1>ร้านแม่ป่วยลั้ง</h1>
+          <p>
+            &emsp;เมื่อพูดถึงอุทัย สิ่งแรกที่หลายๆ คนนึกถึงก็คือขนมปังใส้สังขยา ร้านแม่ป่วยลั้งก็เป็นอีกหนึ่งที่ขึ้นชื่อเรื่องขนมปังสังขยา
+            ที่ร้านนอกจากขนมปังสังขยาแล้วก็ยังมีขนมของฝากอื่น ๆ ที่รสชาติดีไม่แพ้กัน อาทิ ข้าวตังหน้างา ข้าวเกรียบปลาทอด
+             ข้าวกุ้งกรอบ ข้าวเกรียบปลากราย ก็ล้วนแล้วแต่น่ากินไปทุกอย่าง นิยมซื้อเป็นของฝาก ร้านมีสองแห่งทั้งที่หน้าโรงพยาบาลและในตลาด สะดวกที่ไหนก็ไปที่นั่น
+          </p>
+        </div>
+        <img src="pic/food/ร้านแม่ป่วยลั้ง/ร้านแม่ป่วยลั้ง.jpg" alt="nok" style="transform: translateX(-150px);">
+      </div>
+      <div id="dish3" class="dish_menu">
+        <div class="discb">
+          <h1>ร้านน้ำเต้าหู้ไซ้จันทร์</h1>
+          <p>
+            &emsp;ร้านกาแฟเล็ก ๆ ที่อยู่ไม่ห่างจากตรอกโรงยามากนัก นอกจากกาแฟหอมกรุ่นแล้ว ที่ร้านยังมีเมนูอื่นๆ ที่น่าสนใจไม่แพ้กาแฟ ทั้งโกโก้เย็น ชาเขียวปั่น แต่ละเมนูล้วนดึงดูดให้ต้องลองชิมทั้งนั้น
+             ร้านนี้บริหารกันเองในครอบครัว ทำขนมกันเองแบบ Homemade
+             ต้องลองมาชิมดูจะได้รู้ว่าอร่อยแค่ไหน
+             <br>
+             ร้านเปิดบริการ 08.00-20.30 น.
+          </p>
+        </div>
+        <img src="pic/food/ร้านน้ำเต้าหู้ไซ้จันทร์/ร้านน้ำเต้าหู้ไซ้จันทร์.jpg" alt="nok" style="transform: translateX(-166px) scale(-1);;">
+      </div>
+    </div>
+  </div>
 </div>
 
 
-<div class="footer">
-  <h1>This is a Footer get it?</h1>
+<div class="footer" id="contract">
+  <div class="row thanks">
+    <div class="person" style="transform: translateX(10vw) translateY(10vw);">
+      <img src="pic/dev/wan.jpg" alt="" class="developer" >
+      <h1>นายไทธนา อยู่มี</h1>
+      <p>60070029</p>
+    </div>
+    <div class="person" style="transform: translateX(-10vw) translateY(10vw);">
+      <img src="pic/dev/pun.jpg" alt="" class="developer" >
+      <h1>นายพงศภัค ภิญญาพงษ์</h1>
+      <p>60070056</p>
+    </div>
+  </div>
 </div>
-
-
 
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
