--- a/attractions/watThasung.html
+++ b/attractions/watThasung.html
@@ -25,9 +25,9 @@
   </div>
   <div class="information">
     <h1>แนะนำสถานที่</h1>
-    <hr>
+    <hr style="width:5vw; transform:translateY(-1.5vh);">
     <div class="butto">
-      <button class="next" id="fst">ดูข้อมูลแต่ละชั้น</button>
+      <button class="next" id="fst">ดูหน้าต่อไป</button>
       <button class="next" id="snd"></button>
     </div>
     <div class="row" id="struct">
@@ -86,7 +86,7 @@
 
   <div class="map-frame">
     <h1 style="text-align:center; font-size:4em;">แผนที่ click me and go!!</h1>
-    <hr>
+    <hr style="width:11vw; transform:translateY(-1vh);">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3847.831190323224!2d100.0744544732941!3d15.33140643051095!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e1a52ef86bd2a5%3A0x51ced280d3891aa1!2z4Lin4Lix4LiU4LiI4Lix4LiZ4LiX4Liy4Lij4Liy4LihICjguKfguLHguJTguJfguYjguLLguIvguLjguIcp!5e0!3m2!1sth!2sth!4v1525009760137" class="map" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 
